add_subdirectory(ExRender)
if(MSVC OR BORLAND AND NOT WINCE AND NOT WINRT)
add_subdirectory(win)
endif(MSVC OR BORLAND AND NOT WINCE AND NOT WINRT)
add_subdirectory(ExServices)
if(THREADPOOL_ENABLED)
add_subdirectory(ThreadPool)
endif(THREADPOOL_ENABLED)
add_subdirectory(OleSsItemHandler)
add_subdirectory(DwfxSignatureHandler)
add_subdirectory(BrepBuilderFiller)
if(LINUX_X86 OR LINUX_X64 OR APPLE OR SOLX64 OR SOLX86 OR SPARC64 OR SPARC32)
add_subdirectory(ExTimeProvider)
endif(LINUX_X86 OR LINUX_X64 OR APPLE OR SOLX64 OR SOLX86 OR SPARC64 OR SPARC32)
