add_subdirectory(OpenGL)
add_subdirectory(WinOpenGL)
if(NOT WINRT)
  add_subdirectory(WinGDI)
  if(DXSDK_DIR)
    add_subdirectory(WinDirectX)
  endif(DXSDK_DIR)
endif(NOT WINRT)
add_subdirectory(WinBitmap)
if(MSVC AND NOT WINCE AND NOT WINRT OR BORLAND)
  add_subdirectory(WinComposite)
endif(MSVC AND NOT WINCE AND NOT WINRT OR BORLAND)
add_subdirectory(TrXml)
add_subdirectory(WinGLES2)
